3.Software/Mini_SDVX/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.18', folder: 'E:\App\IDE\KeilARM\v5\core\ARM\ARMCLANG\Bin'
Build target 'Mini_SDVX'
../Core/Src/main.c(15): warning: In file included from...../USB_DEVICE/App\usbd_cdc_if.h(93): error: unknown type name 'USBD_CDC_ItfTypeDef'; did you mean 'USBD_ClassTypeDef'?
extern USBD_CDC_ItfTypeDef USBD_Interface_fops_FS;
       ^~~~~~~~~~~~~~~~~~~
       USBD_ClassTypeDef
../Middlewares/ST/STM32_USB_Device_Library/Core/Inc\usbd_def.h(268): note: 'USBD_ClassTypeDef' declared here
} USBD_ClassTypeDef;
  ^
1 error generated.
compiling main.c...
../USB_DEVICE/App/usbd_composite.c(129): error: use of undeclared identifier 'USB_COMPOSITE_CONFIG_DESC_SIZ'
__ALIGN_BEGIN static uint8_t USBD_COMPOSITE_CfgDesc[USB_COMPOSITE_CONFIG_DESC_SIZ] __ALIGN_END =
                                                    ^
../USB_DEVICE/App/usbd_composite.c(133): error: use of undeclared identifier 'USB_COMPOSITE_CONFIG_DESC_SIZ'
  USB_COMPOSITE_CONFIG_DESC_SIZ,
  ^
2 errors generated.
compiling usbd_composite.c...
"Mini_SDVX\Mini_SDVX.axf" - 3 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
